tests/sksl/errors/golden/OpaqueTypeInArray.glsl

in sampler a[1];
in sampler[1] b;
